NEW: implementace koreknich reakci na onToggleSearbar, selhava pouze pri plnem scrollu listview

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -30,7 +30,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".ChooseExercise"
+            android:name=".ChooseExerciseActivity"
             android:label="@string/title_activity_choose_exercise" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
