--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -68,6 +68,15 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="Fragment" />
         </activity>
+        <activity
+            android:name=".ProfileFragment"
+            android:label="@string/title_activity_profile_fragment" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
     </application>
 
 </manifest>
