--- a/project.properties
+++ b/project.properties
@@ -13,4 +13,4 @@
 # Project target.
 target=android-15
 android.library.reference.1=..\\..\\Dropbox\\Android\\resources\\libraries\\actionBarSherlock\\library
-android.library.reference.2=../../workspace/wheel
+android.library.reference.2=..\\..\\workspace\\wheel
