FIX: opraven problem s indikatorem stranek

--- a/project.properties
+++ b/project.properties
@@ -12,5 +12,5 @@
 
 # Project target.
 target=android-15
-android.library.reference.1=..\\..\\Dropbox\\Android\\resources\\libraries\\actionBarSherlock\\library
-android.library.reference.2=..\\..\\workspace\\wheel
+android.library.reference.1=../library
+android.library.reference.2=../../Dropbox/Android/resources/libraries/wheel
